[project]
name = "dag-services"
version = "0.1.0"
description = "A framework for defining, validating, and executing directed acyclic graphs (DAGs) of tools and services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "composio>=0.8.20",
    "langgraph>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
